// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component isDisabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            aria-disabled={true}
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt y83adm-1amfmud"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c rktiq5-11wy4tg bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt y756bg-qc5mdn"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt y83adm-1amfmud"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c rktiq5-11wy4tg bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt y756bg-qc5mdn"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isInvalid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c rktiq5-zjvgbf bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c rktiq5-zjvgbf bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isReadOnly 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-ksaz4x y83adm-1mdhnmt y83adm-ksaz4x"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-1tbck4z y83adm-1tbck4z bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-17ut2f4 1p9eydi-17ut2f4"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-ksaz4x y83adm-1mdhnmt y83adm-ksaz4x"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-1tbck4z y83adm-1tbck4z bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-17ut2f4 1p9eydi-17ut2f4"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt y83adm-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-10d27qj y83adm-10d27qj bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-vq6gb4 1p9eydi-vq6gb4"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1mdhnmt y83adm-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-10d27qj y83adm-10d27qj bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-vq6gb4 1p9eydi-vq6gb4"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6 182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ksor04 y83adm-1mdhnmt y83adm-1ksor04"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-1rh3r0r y83adm-1rh3r0r bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-12m2qyn 1p9eydi-12m2qyn"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="y83adm-1mdhnmt y83adm-1ksor04 y83adm-1mdhnmt y83adm-1ksor04"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="rktiq5-1jvh2c rktiq5-1jvh2c y83adm-1rh3r0r y83adm-1rh3r0r bwxc0z-ygf2ke bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="y756bg-1kmwrjt y756bg-1kmwrjt 1p9eydi-12m2qyn 1p9eydi-12m2qyn"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
